<resources>
    <string name="app_name">e问</string>
    <string name="title_home">首页</string>
    <string name="title_inquiry">问诊</string>
    <string name="title_message">消息</string>
    <string name="title_discovery">发现</string>
    <string name="title_my">我的</string>


    <string name="login_logo">Login Logo</string>
    <string name="login_slogan1">您的在线家庭医生</string>
    <string name="login_slogan2">医生的助手 • 病患的朋友</string>
    <string name="login_weixin">点击使用微信登入</string>

    <string name="login_by_username">使用账号密码登入</string>
    <string name="login_by_username_username_hit">账号/Username</string>
    <string name="login_by_username_password_hit">密码/Password</string>
    <string name="login_by_username_submit">登入/LOGIN</string>
    <string name="login_by_username_register">新用户注册 >>> </string>


    <string name="menu_share">分享</string>
    <string name="menu_help">帮助</string>
    <string name="menu_search">搜索</string>

    <string name="inquiry_now">实时问诊</string>
    <string name="inquiry_visit">复诊</string>
    <string name="inquiry_my_doctor">我的家庭医生</string>

    <string name="inquiry_now_description">描述您的问题</string>
    <string name="inquiry_now_description_upload_btn">上传您的报告</string>
    <string name="inquiry_now_description_submit">进入问诊</string>

    <string name="inquiry_select_online_doctor">选择在线医生</string>
    <string name="immediately_consult">立即咨询</string>
    <string name="selected_online_physician">已选择的在线医生</string>
    <string name="select_consultation_method">请选择咨询方式</string>

    <string name="video_mode">视频模式</string>
    <string name="voice_mode">语音模式</string>
    <string name="word_mode">文字模式</string>
    <string name="send">发送</string>
    <string name="end_of_consult">问诊结束</string>
    <string name="view_records">查看病历</string>
    <string name="received_medical_report_from_doctor">收到医生发来的病历报告</string>
    <string name="illness_description">病情描述</string>
    <string name="processing_opinion">处理意见</string>
    <string name="prescription">药方</string>
    <string name="buy_dai">一键代买</string>
    <string name="follow_up_date">随访日期</string>
    <string name="recommend_specialist">推荐专科医生</string>
    <string name="appointment_immediately">立即预约</string>
    <string name="select_your_solution">请选择您的解决方案</string>
    <string name="deal_with">自行处理</string>
    <string name="make_an_appointment_detection">预约检测</string>
    <string name="quick_buy_medicine">快速买药</string>
    <string name="consult_a_specialist">咨询专科医生</string>
    <string name="medicine_recode_list">病历列表</string>
    <string name="select_a_case_for_consultation">请选择一个病历咨询</string>
    <string name="online_consult">在线咨询</string>
    <string name="online_to_consult">医生在线\n请选择一种方式进行在线咨询</string>
    <string name="offline_consult">医生离线\n请留言，医生会尽快联系您</string>
    <string name="solve_by_self_alert">您已成功选择了 \"自行处理\" 的方式</string>
    <string name="return_to_index">返回主页</string>
    <string name="ok_pay">确认并支付</string>
    <string name="drug_name">药品名称</string>
    <string name="number">数量</string>
    <string name="price">价格</string>
    <string name="go_to">前往</string>
    <string name="confirm_appointment">确认预约</string>
    <string name="payment_method">支付方式</string>
    <string name="union_pay">银联支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="my_center">个人中心</string>
    <string name="hot_recommended">热门推荐</string>
    <string name="hot_information">热门资讯信息</string>
    <string name="health_education">健康教育</string>
    <string name="encyclopedia_of_medicines">药品百科指南</string>
    <string name="the_hospital_life">医院生活</string>
    <string name="doctor_dynamic">医生动态</string>




</resources>
