<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/svg_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_inquiry"
        android:icon="@drawable/svg_inquiry"
        android:title="@string/title_inquiry" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/svg_message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_discovery"
        android:icon="@drawable/svg_discovery"
        android:title="@string/title_discovery" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/svg_my"
        android:title="@string/title_my" />

</menu>
