<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/inquiry_selected_doctor_layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="top"
                android:orientation="horizontal"
                android:padding="20dp"
                android:background="@drawable/radius5"
                android:minHeight="150dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:src="@drawable/tmp_1"
                    android:contentDescription="@string/inquiry_select_online_doctor" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_weight="3"
                    android:text="陈医生（呼吸科）\n上海仁济医院（三甲，特色：综合）\n东院地址：上海市浦建路160号 \n收费：20元/诊断"
                    android:textColor="#666666" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                tools:ignore="Suspicious0dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/white"
                android:text="@string/offline_consult"
                android:textAlignment="center"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/inquiry_now_description_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top"
                android:minLines="10"
                android:maxLines="15"
                android:textSize="16sp"
                android:scrollbars="vertical"
                android:background="@drawable/radius5"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:text="" />


            <Button
                android:id="@+id/inquiry_visit_submit"
                style="@style/zButton"
                android:layout_width="match_parent"
                android:text="@string/send" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>