<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <include layout="@layout/navigation"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TableRow
            android:id="@+id/inquiry_now_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/union_pay"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/union_pay"
                android:src="@drawable/union_pay"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/union_pay_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/union_pay"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/inquiry_visit_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/wechat_pay"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/wechat_pay"
                android:src="@drawable/wechat_pay"
                android:layout_weight="1"
                tools:ignore="MissingConstraints"/>


            <TextView
                android:id="@+id/wechat_pay_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wechat_pay"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/inquiry_my_doctor_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ali_pay"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/ali_pay"
                android:src="@drawable/ali_pay"
                android:layout_weight="1"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/ali_pay_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ali_pay"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textSize="20sp" />

        </TableRow>


    </TableLayout>

</android.support.constraint.ConstraintLayout>